--- a/examples/declarative/cppextensions/plugins/README
+++ b/examples/declarative/cppextensions/plugins/README
@@ -5,5 +5,5 @@ by a C++ plugin (providing the "Time" type), and by QML files (providing the
 To run:
 
   make install
-  qmlviewer -I . plugins.qml
+  QML_IMPORT_PATH=$PWD qmlscene plugins.qml
 
