--- a/tests/auto/translation/CMakeLists.txt
+++ b/tests/auto/translation/CMakeLists.txt
@@ -10,7 +10,7 @@ file(GLOB_RECURSE test_data_glob
     data/*)
 list(APPEND test_data ${test_data_glob})
 
-qt_add_test(tst_translation
+qt_internal_add_test(tst_translation
     SOURCES
         ../shared/qtest_quickcontrols.h
         ../shared/util.cpp ../shared/util.h
@@ -37,7 +37,7 @@ set(qmake_immediate_resource_files
     "qtbase_fr.qm"
 )
 
-qt_add_resource(tst_translation "qmake_immediate"
+qt_internal_add_resource(tst_translation "qmake_immediate"
     PREFIX
         "/"
     FILES
@@ -51,12 +51,12 @@ qt_add_resource(tst_translation "qmake_immediate"
 ## Scopes:
 #####################################################################
 
-qt_extend_target(tst_translation CONDITION ANDROID OR IOS
+qt_internal_extend_target(tst_translation CONDITION ANDROID OR IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\":/data\\\"
 )
 
-qt_extend_target(tst_translation CONDITION NOT ANDROID AND NOT IOS
+qt_internal_extend_target(tst_translation CONDITION NOT ANDROID AND NOT IOS
     DEFINES
         QT_QMLTEST_DATADIR=\\\"${CMAKE_CURRENT_SOURCE_DIR}/data\\\"
 )
